// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.commit.set.sh given: [case1] commit without push when: [t0] mechanic has uses and staged changes then: outputs righteous with commit details 1`] = `
"🐢 righteous!

🐚 git.commit.set
   ├─ commit
   │  ├─ header: fix(api): validate input
   │  ├─ body
   │  │  └─ - test change
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  └─ patron
   │     ├─ name: Test Human
   │     └─ email: human@test.com
   ├─ push: skipped
   └─ meter
      ├─ left: 2
      └─ push: blocked
"
`;

exports[`git.commit.set.sh given: [case3] no uses left when: [t0] apply mode with 0 uses then: outputs bummer dude 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: no commit uses left

ask your human to grant more:
  $ git.commit.uses set --quant N --push allow|block
"
`;

exports[`git.commit.set.sh given: [case3] no uses left when: [t1] plan mode with 0 uses then: plan is allowed without uses 1`] = `
"🐢 heres the wave...

🐚 git.commit.set --mode plan
   ├─ commit
   │  ├─ header: fix: zero uses plan
   │  ├─ body
   │  │  └─ - test change
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  ├─ patron
   │  │  ├─ name: Test Human
   │  │  └─ email: human@test.com
   │  └─ files
   │     └─ fix.txt
   ├─ push: skipped
   └─ meter
      ├─ left: 0 → -1
      └─ push: blocked

run with --mode apply to execute
"
`;

exports[`git.commit.set.sh given: [case4] push not allowed when: [t0] push is blocked but --push requested then: outputs bummer dude about push 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: push not allowed in current grant

ask your human to grant with --push allow

"
`;

exports[`git.commit.set.sh given: [case6] no git user configured when: [t0] git user.name is not set then: exits with error about patron 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: cannot determine patron

human must configure git identity:
  $ git config user.name "Your Name"\\n  $ git config user.email "your@email.com"
"
`;

exports[`git.commit.set.sh given: [case10] plan mode shows preview when: [t0] plan mode is default then: shows plan output without committing 1`] = `
"🐢 heres the wave...

🐚 git.commit.set --mode plan
   ├─ commit
   │  ├─ header: fix: plan test
   │  ├─ body
   │  │  └─ - test change
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  ├─ patron
   │  │  ├─ name: Test Human
   │  │  └─ email: human@test.com
   │  └─ files
   │     └─ fix.txt
   ├─ push: skipped
   └─ meter
      ├─ left: 3 → 2
      └─ push: blocked

run with --mode apply to execute
"
`;

exports[`git.commit.set.sh given: [case10] plan mode shows preview when: [t1] plan mode with push shows PR title then: shows PR title as current message when first commit 1`] = `
"🐢 heres the wave...

🐚 git.commit.set --mode plan
   ├─ commit
   │  ├─ header: feat: new feature
   │  ├─ body
   │  │  └─ - add feature
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  ├─ patron
   │  │  ├─ name: Test Human
   │  │  └─ email: human@test.com
   │  └─ files
   │     └─ feature.txt
   ├─ push: origin/feat/new-feature
   ├─ pr
   │  ├─ title: feat: new feature
   │  └─ action: findsert draft
   └─ meter
      ├─ left: 2 → 1
      └─ push: allowed

run with --mode apply to execute
"
`;

exports[`git.commit.set.sh given: [case10] plan mode shows preview when: [t1] plan mode with push shows PR title then: shows first commit as PR title when branch has history 1`] = `
"🐢 heres the wave...

🐚 git.commit.set --mode plan
   ├─ commit
   │  ├─ header: cont: third commit
   │  ├─ body
   │  │  └─ - add third feature
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  ├─ patron
   │  │  ├─ name: Test Human
   │  │  └─ email: human@test.com
   │  └─ files
   │     └─ third.txt
   ├─ push: origin/feat/multi-commit
   ├─ pr
   │  ├─ title: feat: first commit on branch
   │  └─ action: findsert draft
   └─ meter
      ├─ left: 5 → 4
      └─ push: allowed

run with --mode apply to execute
"
`;

exports[`git.commit.set.sh given: [case11] commit to main blocked (ON_BASE guard) when: [t0] on main branch then: exits with error about base branch 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: cannot commit to base branch

   you are on main - create a feature branch first

   example:
     git checkout -b feat/my-feature
"
`;

exports[`git.commit.set.sh given: [case12] PR title on stacked branch (branch from branch) when: [t0] branch B created from branch A, both with commits then: PR title uses first commit unique to branch B 1`] = `
"🐢 heres the wave...

🐚 git.commit.set --mode plan
   ├─ commit
   │  ├─ header: cont: B3 third on branch-b
   │  ├─ body
   │  │  └─ - add B3 feature
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  ├─ patron
   │  │  ├─ name: Test Human
   │  │  └─ email: human@test.com
   │  └─ files
   │     └─ b3.txt
   ├─ push: origin/turtle/branch-b
   ├─ pr
   │  ├─ title: feat: B1 first on branch-b
   │  └─ action: findsert draft
   └─ meter
      ├─ left: 5 → 4
      └─ push: allowed

run with --mode apply to execute
"
`;

exports[`git.commit.set.sh given: [case13] last use with push allowed shows push status when: [t0] uses go from 1 to 0 with push allowed then: meter shows push: allowed after commit 1`] = `
"🐢 righteous!

🐚 git.commit.set
   ├─ commit
   │  ├─ header: fix(api): last commit
   │  ├─ body
   │  │  └─ - test change
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  └─ patron
   │     ├─ name: Test Human
   │     └─ email: human@test.com
   ├─ push: skipped
   └─ meter
      ├─ left: 0
      └─ push: allowed
"
`;

exports[`git.commit.set.sh given: [case13] last use with push allowed shows push status when: [t0] uses go from 1 to 0 with push allowed then: plan mode also shows push: allowed 1`] = `
"🐢 heres the wave...

🐚 git.commit.set --mode plan
   ├─ commit
   │  ├─ header: fix(api): last commit plan
   │  ├─ body
   │  │  └─ - test change
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  ├─ patron
   │  │  ├─ name: Test Human
   │  │  └─ email: human@test.com
   │  └─ files
   │     └─ fix.txt
   ├─ push: skipped
   └─ meter
      ├─ left: 1 → 0
      └─ push: allowed

run with --mode apply to execute
"
`;

exports[`git.commit.set.sh given: [case14] bound level enforced — fix rejects feat prefix when: [t0] level bound to fix, header starts with feat( then: exits with level mismatch error 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: commit prefix mismatch

   header: feat(api): add endpoint
   level.bound = fix (explicit)
   level.found = feat

   the level is bound to 'fix' but the commit prefix is 'feat'.

   the branch is bound to fix — use fix: even if you think its a feat.
   change your commit header to fix(...):
"
`;

exports[`git.commit.set.sh given: [case14] multiline message is required when: [t1] message is multiline (has body) then: body appears in plan tree output 1`] = `
"🐢 heres the wave...

🐚 git.commit.set --mode plan
   ├─ commit
   │  ├─ header: fix: with desc
   │  ├─ body
   │  │  ├─ - fixed the bug
   │  │  └─ - added tests
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  ├─ patron
   │  │  ├─ name: Test Human
   │  │  └─ email: human@test.com
   │  └─ files
   │     └─ fix.txt
   ├─ push: skipped
   └─ meter
      ├─ left: 2 → 1
      └─ push: blocked

run with --mode apply to execute
"
`;

exports[`git.commit.set.sh given: [case15] plan mode auto-revoke display with push when: [t0] uses go from 1 to 0 with push allowed then: plan shows push: allowed to blocked (revoked) 1`] = `
"🐢 heres the wave...

🐚 git.commit.set --mode plan
   ├─ commit
   │  ├─ header: fix: last use
   │  ├─ body
   │  │  └─ - last commit before revoke
   │  ├─ author
   │  │  ├─ name: seaturtle[bot]
   │  │  └─ email: seaturtle@ehmpath.com
   │  ├─ patron
   │  │  ├─ name: Test Human
   │  │  └─ email: human@test.com
   │  └─ files
   │     └─ fix.txt
   ├─ push: origin/turtle/revoke-test
   ├─ pr
   │  ├─ title: fix: last use
   │  └─ action: findsert draft
   └─ meter
      ├─ left: 1 → 0
      └─ push: allowed → blocked (revoked)

run with --mode apply to execute
"
`;

exports[`git.commit.set.sh given: [case16] bound level enforced — feat rejects fix prefix when: [t0] level bound to feat, header starts with fix( then: exits with level mismatch error 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: commit prefix mismatch

   header: fix(ui): button color
   level.bound = feat (explicit)
   level.found = fix

   the level is bound to 'feat' but the commit prefix is 'fix'.

   the branch is bound to feat — use feat: even if you think its a fix.
   change your commit header to feat(...):
"
`;

exports[`git.commit.set.sh given: [case17] adhoc Co-authored-by forbidden when: [t0] message contains Co-authored-by trailer then: exits with error about adhoc co-author 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: adhoc Co-authored-by forbidden

   the commit message contains a Co-authored-by trailer.
   this skill sets Co-authored-by automatically from your git config.

   remove the Co-authored-by line from your message and retry.
"
`;

exports[`git.commit.set.sh given: [case20] continuation commit enforcement when: [t2] second fix after first fix then: commit is BLOCKED with error 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: branch already has a behavioral commit

   first behavioral commit: fix(api): first fix
   attempted: fix(api): second fix

   use \`cont:\` or \`cont(api):\` prefix
"
`;

exports[`git.commit.set.sh given: [case20] continuation commit enforcement when: [t3] second feat after first fix then: commit is BLOCKED with error 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: branch already has a behavioral commit

   first behavioral commit: fix(api): first fix
   attempted: feat(api): add feature

   use \`cont:\` or \`cont(api):\` prefix
"
`;

exports[`git.commit.set.sh given: [case24] commit with global blocker active when: [t0] global blocker is active and local quota present then: commit is blocked with global error 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: commits blocked globally

ask your human to lift:
  $ git.commit.uses allow --global
"
`;

exports[`git.commit.set.sh given: [case26] commit with corrupt global blocker file when: [t0] global blocker file contains invalid json then: commit is blocked with corrupt file error 1`] = `
"🐢 bummer dude...

🐚 git.commit.set
   └─ error: global blocker file corrupt

check the file:
  $ cat ~/.rhachet/storage/repo=ehmpathy/role=mechanic/.meter/git.commit.uses.jsonc
"
`;
